PRESELECTED - Better selection state for data

--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@
             }
             .bottom-panel-content {
                 padding: 16px;
+                gap: 8px;
+            }
+            .legend-section {
+                border-top: 1px solid rgba(0, 0, 0, 0.12);
+                padding-top: 8px;
             }
             .legend-horizontal {
                 gap: 8px;
