--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
             text-align: center;
             pointer-events: none;
         }
+        #top-header * {
+            pointer-events: none;
+        }
+        #top-header button {
+            pointer-events: auto !important;
+            -webkit-mask-image: none !important;
+            mask-image: none !important;
+        }
         #top-header h1 {
             margin: 0;
             font-family: 'Stack Sans Headline', sans-serif;
@@ -54,6 +62,28 @@
             font-weight: 500;
             color: rgba(0, 0, 0, 0.87);
             letter-spacing: 0.15px;
+        }
+        #toggle-mode-btn {
+            margin-top: 12px;
+            padding: 8px 16px;
+            font-family: 'Stack Sans Headline', sans-serif;
+            font-size: 14px;
+            font-weight: 500;
+            color: rgba(0, 0, 0, 0.87);
+            background: rgba(255, 255, 255, 0.95);
+            border: 1px solid rgba(0, 0, 0, 0.3);
+            border-radius: 6px;
+            cursor: pointer;
+            pointer-events: auto !important;
+            transition: background 0.2s ease;
+            display: inline-block;
+            position: relative;
+            z-index: 1001;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        #toggle-mode-btn:hover {
+            background: rgba(255, 255, 255, 1);
+            border-color: rgba(0, 0, 0, 0.5);
         }
         .info {
             padding: 16px;
@@ -328,6 +358,7 @@
     <div id="top-header">
         <h1>Alameda County - November 2025 Election Results</h1>
         <h2>Proposition 50 – Consolidated Precincts</h2>
+        <button id="toggle-mode-btn" onclick="toggleMapMode()">Switch to Proportional Symbols</button>
     </div>
     <div id="map"></div>
     <div id="bottom-panel">
