PREVIEW IMAGE - Open graph image and read me updates

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Proposition 50 Vote Results by Precinct</title>
+    <title>Alameda County - November 2025 Election Results - Proposition 50 Vote Results by Precinct</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Alameda County - November 2025 Election Results - Proposition 50" />
+    <meta property="og:description" content="Interactive map showing Proposition 50 vote results by precinct in Alameda County" />
+    <meta property="og:image" content="preview.jpg" />
+    <meta property="og:url" content="" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Alameda County - November 2025 Election Results - Proposition 50" />
+    <meta name="twitter:description" content="Interactive map showing Proposition 50 vote results by precinct in Alameda County" />
+    <meta name="twitter:image" content="preview.jpg" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <!-- Stack Sans Font -->
