--- a/index.html
+++ b/index.html
@@ -295,6 +295,68 @@
             color: #000;
             white-space: nowrap;
         }
+        .vote-method-breakdown {
+            margin-top: 16px;
+            padding-top: 16px;
+            border-top: 1px solid rgba(0, 0, 0, 0.12);
+        }
+        .vote-method-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            cursor: pointer;
+            user-select: none;
+            font-size: 12px;
+            font-weight: 500;
+            color: rgba(0, 0, 0, 0.6);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            margin-bottom: 12px;
+            padding: 4px 0;
+            transition: color 0.2s ease;
+        }
+        .vote-method-header:hover {
+            color: rgba(0, 0, 0, 0.87);
+        }
+        .vote-method-arrow {
+            display: inline-block;
+            margin-left: 8px;
+            transition: transform 0.3s ease;
+            font-size: 16px;
+            line-height: 1;
+        }
+        .vote-method-arrow.expanded {
+            transform: rotate(90deg);
+        }
+        .vote-method-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease, opacity 0.3s ease;
+            opacity: 0;
+            margin: 0 -20px;
+            padding: 0 20px;
+        }
+        .vote-method-content.expanded {
+            max-height: 1000px;
+            opacity: 1;
+        }
+        .vote-method-content .vote-method-bar-wrapper {
+            padding: 0;
+            margin: 0;
+        }
+        .vote-method-content .vote-method-label-row {
+            padding: 0;
+            margin: 0 0 2px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+            gap: 0;
+        }
+        .vote-method-content .vote-method-label-row > span:first-child,
+        .vote-method-content .vote-method-label-row > span:last-child {
+            flex: 0 0 auto;
+        }
         .legend-section {
             border-top: 1px solid rgba(0, 0, 0, 0.12);
             padding-top: 16px;
