--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
             padding-bottom: 20px;
         }
         .vote-method-breakdown {
-            margin-top: 16px;
-            padding-top: 16px;
+            margin-top: 8px;
+            padding-top: 8px;
             border-top: 1px solid rgba(0, 0, 0, 0.12);
         }
         .vote-method-header {
@@ -316,8 +316,8 @@
             color: rgba(0, 0, 0, 0.6);
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            margin-bottom: 12px;
-            padding: 4px 0;
+            margin-bottom: 0;
+            padding: 2px 0;
             transition: color 0.2s ease;
             gap: 8px;
         }
@@ -438,8 +438,8 @@
 </head>
 <body>
     <div id="top-header">
-        <h1>Alameda County - November 2025 Election Results</h1>
-        <h2>Proposition 50 – Consolidated Precincts</h2>
+        <h1>Alameda County Results</h1>
+        <h2>Nov 2025 – Proposition 50</h2>
         <button id="toggle-mode-btn" onclick="toggleMapMode()">Switch to Proportional Symbols</button>
     </div>
     <div id="map"></div>
