--- a/index.html
+++ b/index.html
@@ -44,16 +44,29 @@
             right: 0;
             z-index: 1000;
             padding: 40px 20px 60px;
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0) 100%);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%);
-            -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%);
+            /* Background/blur now handled by ::before so content stays crisp */
+            background: transparent;
             text-align: center;
+            pointer-events: none;
+        }
+        #top-header::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            /* Solid white overlay with blur */
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            /* Fade the blurred layer to transparent (and thus 0 blur) */
+            mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.85) 45%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
+            -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.85) 45%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
+            z-index: 0;
             pointer-events: none;
         }
         #top-header * {
             pointer-events: none;
+            position: relative;
+            z-index: 1;
         }
         #top-header button {
             pointer-events: auto !important;
@@ -83,7 +96,7 @@
             font-size: 14px;
             font-weight: 500;
             color: rgba(0, 0, 0, 0.87);
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 1);
             border: 1px solid rgba(0, 0, 0, 0.3);
             border-radius: 6px;
             cursor: pointer;
@@ -91,7 +104,7 @@
             transition: background 0.2s ease;
             display: inline-block;
             position: relative;
-            z-index: 1001;
+            z-index: 2;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
         }
         #toggle-mode-btn:hover {
@@ -440,7 +453,7 @@
     <div id="top-header">
         <h1>Alameda County Results</h1>
         <h2>Nov 2025 – Proposition 50</h2>
-        <button id="toggle-mode-btn" onclick="toggleMapMode()">Switch to Proportional Symbols</button>
+        <button id="toggle-mode-btn" onclick="toggleMapMode()">Mode – Shaded Districts</button>
     </div>
     <div id="map"></div>
     <div id="bottom-panel">
