--- a/index.html
+++ b/index.html
@@ -410,6 +410,16 @@
             border-radius: 2px;
             flex-shrink: 0;
         }
+        .legend-meta {
+            margin-top: 10px;
+            text-align: center;
+            font-size: 12px;
+            color: rgba(0, 0, 0, 0.6);
+        }
+        .legend-meta a {
+            color: rgba(0, 0, 0, 0.6);
+            text-decoration: underline;
+        }
         @media (max-width: 768px) {
             #bottom-panel {
                 width: 95%;
@@ -465,6 +475,9 @@
             <div class="legend-section">
                 <h4>Yes % – Key</h4>
                 <div class="legend-horizontal" id="legend-horizontal"></div>
+                <div class="legend-meta">
+                    <div><a href="https://github.com/thushana/alameda-election-2025-proposition-50" target="_blank" rel="noopener">Data Sources & Methodology</a></div>
+                </div>
             </div>
         </div>
     </div>
