LEGEND - Tighter code + counts

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 <span>Hover or Tap a precinct</span>
             </div>
             <div class="legend-section">
-                <h4>Yes % – Key</h4>
+                <h4>Legend</h4>
                 <div class="legend-horizontal" id="legend-horizontal"></div>
                 <div class="legend-meta">
                     <div><a href="https://github.com/thushana/alameda-election-2025-proposition-50" target="_blank" rel="noopener">Data Sources & Methodology</a></div>
