--- a/index.html
+++ b/index.html
@@ -420,6 +420,14 @@
             color: rgba(0, 0, 0, 0.6);
             text-decoration: underline;
         }
+        /* Hide Leaflet flag icon in attribution */
+        .leaflet-control-attribution a:first-child::before {
+            display: none;
+        }
+        .leaflet-control-attribution a:first-child {
+            padding-left: 0;
+        }
+        
         @media (max-width: 768px) {
             #bottom-panel {
                 width: 95%;
