--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
             letter-spacing: 0.15px;
         }
         #toggle-mode-btn {
-            margin-top: 12px;
             padding: 8px 16px;
             font-family: 'Stack Sans Headline', sans-serif;
             font-size: 14px;
@@ -109,6 +108,83 @@
         }
         #toggle-mode-btn:hover {
             border-color: rgba(0, 0, 0, 0.5);
+        }
+        .button-container {
+            display: flex;
+            gap: 8px;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 12px;
+            width: 100%;
+            align-items: center;
+        }
+        .button-container > * {
+            flex-shrink: 0;
+        }
+        #city-selector-btn {
+            padding: 8px 16px;
+            font-family: 'Stack Sans Headline', sans-serif;
+            font-size: 14px;
+            font-weight: 500;
+            color: rgba(0, 0, 0, 0.87);
+            background: rgba(255, 255, 255, 1);
+            border: 1px solid rgba(0, 0, 0, 0.3);
+            border-radius: 6px;
+            cursor: pointer;
+            pointer-events: auto !important;
+            transition: background 0.2s ease;
+            display: inline-block;
+            position: relative;
+            z-index: 2;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        #city-selector-btn:hover {
+            border-color: rgba(0, 0, 0, 0.5);
+        }
+        .city-dropdown {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            margin-top: 8px;
+            z-index: 1002;
+            min-width: 200px;
+            max-width: 300px;
+            max-height: 400px;
+            overflow-y: auto;
+            pointer-events: auto !important;
+        }
+        .city-dropdown-content {
+            background: rgba(255, 255, 255, 1);
+            border: 1px solid rgba(0, 0, 0, 0.3);
+            border-radius: 6px;
+            box-shadow: 0px 4px 6px -1px rgba(0,0,0,0.2), 0px 2px 4px -1px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+            padding: 8px 0;
+            pointer-events: auto !important;
+        }
+        .city-dropdown-item {
+            padding: 10px 16px;
+            cursor: pointer;
+            font-family: 'Stack Sans Headline', sans-serif;
+            font-size: 14px;
+            color: rgba(0, 0, 0, 0.87);
+            transition: background 0.2s ease;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            pointer-events: auto !important;
+            user-select: none;
+        }
+        .city-dropdown-item:hover {
+            background: rgba(0, 0, 0, 0.05);
+        }
+        .city-dropdown-item-name {
+            font-weight: 500;
+        }
+        .city-dropdown-item-stats {
+            font-size: 12px;
+            color: rgba(0, 0, 0, 0.6);
+            margin-left: 12px;
         }
         #bottom-panel {
             position: fixed;
@@ -411,7 +487,15 @@
     <div id="top-header">
         <h1>Alameda County Results</h1>
         <h2>Nov 2025 – Proposition 50</h2>
-        <button id="toggle-mode-btn" onclick="toggleMapMode()">Mode – Shaded Districts</button>
+        <div class="button-container">
+            <button id="toggle-mode-btn" onclick="toggleMapMode()">Mode – Shaded Districts</button>
+            <div style="position: relative; display: inline-block;">
+                <button id="city-selector-btn" onclick="toggleCityDropdown()">City – Alameda County</button>
+                <div id="city-dropdown" class="city-dropdown" style="display: none;">
+                    <div class="city-dropdown-content" id="city-dropdown-content"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="map"></div>
     <div id="bottom-panel">
