--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             background: transparent;
             text-align: center;
             pointer-events: none;
+            /* Prevent header from clipping dropdown */
+            overflow: visible;
         }
         #top-header::before {
             content: '';
@@ -57,9 +59,9 @@
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
-            /* Fade the blurred layer to transparent (and thus 0 blur) */
-            mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.85) 45%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
-            -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.85) 45%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0) 100%);
+            /* Fade the blurred layer to transparent (and thus 0 blur) - stop earlier to prevent stretching */
+            mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.3) 50%, rgba(0,0,0,0) 60%);
+            -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.3) 50%, rgba(0,0,0,0) 60%);
             z-index: 0;
             pointer-events: none;
         }
@@ -116,10 +118,25 @@
             flex-wrap: wrap;
             margin-top: 12px;
             width: 100%;
-            align-items: center;
+            align-items: flex-start;
+            position: relative;
         }
         .button-container > * {
             flex-shrink: 0;
+        }
+        /* Prevent layout shift when dropdown opens */
+        .button-container > button {
+            position: relative;
+            z-index: 1;
+        }
+        .button-container > .city-button-wrapper {
+            position: relative;
+            z-index: 1;
+            display: inline-block;
+            vertical-align: top;
+            /* Prevent wrapper from expanding when dropdown opens */
+            width: auto;
+            height: auto;
         }
         #city-selector-btn {
             padding: 8px 16px;
@@ -141,18 +158,25 @@
         #city-selector-btn:hover {
             border-color: rgba(0, 0, 0, 0.5);
         }
+        .city-button-wrapper {
+            position: relative;
+            display: inline-block;
+            /* Prevent dropdown from affecting layout */
+            vertical-align: top;
+        }
         .city-dropdown {
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            margin-top: 8px;
-            z-index: 1002;
+            position: fixed;
+            /* Calculate position relative to button */
+            z-index: 10000;
             min-width: 200px;
             max-width: 300px;
             max-height: 400px;
-            overflow-y: auto;
+            /* Don't clip rounded corners - use padding instead */
+            padding: 0;
             pointer-events: auto !important;
+            /* Ensure dropdown is not clipped */
+            contain: none;
+            overflow: visible;
         }
         .city-dropdown-content {
             background: rgba(255, 255, 255, 1);
@@ -161,6 +185,15 @@
             box-shadow: 0px 4px 6px -1px rgba(0,0,0,0.2), 0px 2px 4px -1px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
             padding: 8px 0;
             pointer-events: auto !important;
+            /* Scrollable content with rounded corners visible */
+            max-height: 400px;
+            overflow-y: auto;
+            overflow-x: visible;
+            /* Ensure rounded corners aren't clipped when scrolling */
+            -webkit-overflow-scrolling: touch;
+            /* Use clip-path to preserve rounded corners during scroll */
+            clip-path: inset(0 round 6px);
+            -webkit-clip-path: inset(0 round 6px);
         }
         .city-dropdown-item {
             padding: 10px 16px;
@@ -170,21 +203,32 @@
             color: rgba(0, 0, 0, 0.87);
             transition: background 0.2s ease;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: center;
+            gap: 12px;
             pointer-events: auto !important;
             user-select: none;
+            text-align: left;
         }
         .city-dropdown-item:hover {
             background: rgba(0, 0, 0, 0.05);
         }
         .city-dropdown-item-name {
             font-weight: 500;
+            min-width: 150px;
+            max-width: 150px;
+            text-align: left !important;
+            flex-shrink: 0;
+            display: block;
         }
         .city-dropdown-item-stats {
-            font-size: 12px;
-            color: rgba(0, 0, 0, 0.6);
-            margin-left: 12px;
+            font-size: 14px;
+            font-weight: 600;
+            margin-left: 0;
+            white-space: nowrap;
+            text-align: left !important;
+            flex-shrink: 0;
+            display: block;
         }
         #bottom-panel {
             position: fixed;
@@ -489,7 +533,7 @@
         <h2>Nov 2025 – Proposition 50</h2>
         <div class="button-container">
             <button id="toggle-mode-btn" onclick="toggleMapMode()">Mode – Shaded Districts</button>
-            <div style="position: relative; display: inline-block;">
+            <div class="city-button-wrapper">
                 <button id="city-selector-btn" onclick="toggleCityDropdown()">City – Alameda County</button>
                 <div id="city-dropdown" class="city-dropdown" style="display: none;">
                     <div class="city-dropdown-content" id="city-dropdown-content"></div>
@@ -508,7 +552,7 @@
                 <h4>Legend</h4>
                 <div class="legend-horizontal" id="legend-horizontal"></div>
                 <div class="legend-meta">
-                    <div><a href="https://github.com/thushana/alameda-election-2025-proposition-50" target="_blank" rel="noopener">Data Sources & Methodology</a></div>
+                    <div>Data updated Nov 7, 2025 • <a href="https://github.com/thushana/alameda-election-2025-proposition-50" target="_blank" rel="noopener">Data Sources & Methodology</a> • By Thushan Amarasiriwardena</div>
                 </div>
             </div>
         </div>
