--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       #toggle-mode-btn {
         padding: 8px 16px;
         font-family: 'Stack Sans Headline', sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 500;
         color: rgba(0, 0, 0, 0.87);
         background: rgba(255, 255, 255, 1);
@@ -177,7 +177,7 @@
       #city-selector-btn {
         padding: 8px 16px;
         font-family: 'Stack Sans Headline', sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 500;
         color: rgba(0, 0, 0, 0.87);
         background: rgba(255, 255, 255, 1);
@@ -203,7 +203,7 @@
       .city-dropdown {
         position: fixed;
         /* Calculate position relative to button */
-        z-index: 10000;
+        z-index: 99999; /* Highest level - above everything */
         min-width: 200px;
         max-width: 300px;
         max-height: 400px;
@@ -213,26 +213,50 @@
         /* Ensure dropdown is not clipped */
         contain: none;
         overflow: visible;
+        /* Ensure dropdown is not cropped on left */
+        left: auto;
+        right: auto;
+        /* Ensure scrolling works - don't interfere with content scrolling */
+        display: block;
+        /* Allow content to scroll */
+        height: auto;
+      }
+      @media (max-width: 768px) {
+        .city-dropdown {
+          max-height: 350px; /* Shorter on mobile to show ~7 cities */
+        }
+        .city-dropdown-content {
+          max-height: 350px; /* Match dropdown height on mobile */
+        }
       }
       .city-dropdown-content {
         background: rgba(255, 255, 255, 1);
         border: 1px solid rgba(0, 0, 0, 0.3);
         border-radius: 6px;
         box-shadow:
-          0px 4px 6px -1px rgba(0, 0, 0, 0.2),
-          0px 2px 4px -1px rgba(0, 0, 0, 0.14),
-          0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+          0px 8px 16px -4px rgba(0, 0, 0, 0.3),
+          0px 4px 8px -2px rgba(0, 0, 0, 0.2),
+          0px 2px 4px -1px rgba(0, 0, 0, 0.15);
         padding: 8px 0;
         pointer-events: auto !important;
         /* Scrollable content with rounded corners visible */
         max-height: 400px;
+        height: auto;
         overflow-y: auto;
-        overflow-x: visible;
+        overflow-x: hidden;
         /* Ensure rounded corners aren't clipped when scrolling */
         -webkit-overflow-scrolling: touch;
         /* Use clip-path to preserve rounded corners during scroll */
         clip-path: inset(0 round 6px);
         -webkit-clip-path: inset(0 round 6px);
+        /* Ensure scrolling works */
+        position: relative;
+        /* Enable touch scrolling on mobile */
+        touch-action: pan-y;
+        /* Ensure content can scroll */
+        will-change: scroll-position;
+        /* Force scrolling to work */
+        overscroll-behavior: contain;
       }
       .city-dropdown-item {
         padding: 10px 16px;
@@ -545,10 +569,10 @@
       @media (max-width: 768px) {
         #bottom-panel {
           width: 95%;
-          bottom: 10px;
+          bottom: 5px;
         }
         .bottom-panel-content {
-          padding: 16px;
+          padding: 12px;
           gap: 8px;
         }
         .legend-section {
